# pubkey-protocol

./: .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  project.json  tsconfig.base.json
anchor/programs/pubkey-profile/: Cargo.toml
anchor/programs/pubkey-profile/src/: constants.rs  errors.rs  lib.rs  utils.rs
anchor/programs/pubkey-profile/src/instructions/: mod.rs
anchor/programs/pubkey-profile/src/instructions/community/: create_community.rs  update_community_details.rs  update_community_feepayers.rs
anchor/programs/pubkey-profile/src/instructions/identity/: add.rs  remove.rs
anchor/programs/pubkey-profile/src/instructions/profile/: add_authority.rs  add_profile_authority.rs  create.rs  mod.rs  remove_authority.rs  remove_profile_authority.rs  update_avatar_url.rs
anchor/programs/pubkey-profile/src/state/: community.rs  identity.rs  mod.rs  pointer.rs  profile.rs
anchor/programs/pubkey-protocol/: Cargo.toml
anchor/programs/pubkey-protocol/src/: constants.rs  errors.rs  lib.rs  utils.rs
anchor/programs/pubkey-protocol/src/instructions/: mod.rs
anchor/programs/pubkey-protocol/src/instructions/community/: add_community_provider.rs  community_authority_approve.rs  community_authority_decline.rs  community_authority_request.rs  community_create.rs  community_provider_disable.rs  community_provider_enable.rs  mod.rs  (+16 more)
anchor/programs/pubkey-protocol/src/state/: community.rs  config.rs  identity.rs  identity_provider.rs  mod.rs  pointer.rs  profile.rs  provider.rs
(+333 files in other folders)
